--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Joshua Argomaniz</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="#" class="btn-rounded-white">Hey!!!</a>
         </div>
         <!-- End #lead-content -->
 
