--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Joshua Argomaniz</h1>
-            <h2>Software Engineer</h2>
+            <h2>Software </h2>
             <a href="file:///C:\Users\joshu\Downloads" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
