--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Joshua Argomaniz</h1>
             <h2>Software </h2>
-            <a href="file:///C:\Users\joshu\Downloads" class="btn-rounded-white">Download Resume</a>
+            <a href="file:///C:\Users\joshu\Downloads/Resume 2023" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
