--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/space-invaders.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Space Invaders Game</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            I made a recreation of the Space Invaders arcade game in GameMaker Studio 2 in 2019.
+                            I was able to get all the aliens to move in unison, get the player able to destroy every alien,
+                            and have working sounds for player shooting and player/alien deaths.
                         </p>
                         <a href="#">View Project</a>
                     </div>
