--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/space-invaders.jpg" />
+                        <img src="images/space-invaders.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
