--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
             <li>Python</li>
             <li>Java</li>
             <li>C++</li>
+            <li>GameMaker Studio 2</li>
+            <li>Photoshop and GIMP</li>
         </ul>
     </div>
     <!-- End #skills -->
