--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             I was able to get all the aliens to move in unison, get the player able to destroy every alien,
                             and have working sounds for player shooting and player/alien deaths.
                         </p>
-                        <a href="C:\Users\joshu\Downloads\SpaceInvadersClone"  download= "SpaceInvadersClone"  class="btn-rounded-white"> View Project
+                        <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
